Flask project updated

--- a/Desktop/Mestrado/1A_2S/Processamento Linguagem Natural/Flask/templates/homePage.html
+++ b/Desktop/Mestrado/1A_2S/Processamento Linguagem Natural/Flask/templates/homePage.html
@@ -117,25 +117,25 @@
 {% block main %}
   <main>
     <div class="intro">
-      <h1>A Web Developer</h1>
-      <p>I am a web developer and I love to create websites.</p>
+      <h1>An engineer on the run</h1>
+      <p>I am a biomedical engineer who can be easily found running on a forest.</p>
       <button>Learn More</button>
     </div>
     <div class="achievements">
       <div class="work">
         <i class="fas fa-atom"></i>
         <p class="work-heading">Projects</p>
-        <p class="work-text">I have worked on many projects and I am very proud of them. I am a very good developer and I am always looking for new projects.</p>
+        <p class="work-text">I have worked on two research projects of Arduino and data collection for medical research, allied to minor development projects inside the curricular subjects.</p>
       </div>
       <div class="work">
         <i class="fas fa-skiing"></i>
         <p class="work-heading">Skills</p>
-        <p class="work-text">I have a lot of skills and I am very good at them. I am very good at programming and I am always looking for new skills.</p>
+        <p class="work-text">The combination of high performance sport with a successful academic career have suited me with very desirable skills for the work environment: adaptability, stress/time management and decision making.</p>
       </div>
       <div class="work">
         <i class="fas fa-ethernet"></i>
         <p class="work-heading">Network</p>
-        <p class="work-text">I have a lot of network skills and I am very good at them. I am very good at networking and I am always looking for new network skills.</p>
+        <p class="work-text">My international network extends beyond European borders, mostly thanks to all international competitions I have attended, but also the volunteering works as events organizer.</p>
       </div>
     </div>
     <div class="about-me">
