--- a/Desktop/Mestrado/1A_2S/Processamento Linguagem Natural/Flask/templates/layout.html
+++ b/Desktop/Mestrado/1A_2S/Processamento Linguagem Natural/Flask/templates/layout.html
@@ -26,7 +26,7 @@
     }
 
     .header .logo {
-        font-size: 25px;
+        font-size: 28px;
         font-family: 'Sriracha', cursive;
         color: #000;
         text-decoration: none;
@@ -45,6 +45,7 @@
         text-decoration: none;
         color: #000;
         padding: 35px 20px;
+        font-size: 20px;
     }
     /* CSS for footer */
     .footer {
@@ -93,7 +94,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Tomacho</a>
+        <a href="/tomacho-home" class="logo">Tomacho</a>
         <nav class="nav-items">
           <a href="tomacho-home">Home</a>
           <a href="projects">Projects</a>
@@ -117,7 +118,7 @@
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/tomas_a_lima/?hl=en"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/lima-tomas/"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/Tomaicho"><i class="fab fa-github"></i></a>
             
           </div>
         </div>
